cleaned update files

--- a/daily_run.ipynb
+++ b/daily_run.ipynb
@@ -59,13 +59,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "loop_boxes('PAN','2018_06_01','2018_06_07')"
+    "loop_boxes('PR','2018_06_01','2018_06_07')"
    ]
   },
   {
